# Spotty

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_QUALITY.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  pylint.yml
exportify-csv-files/: All_Playlist_Combination.csv  Liked_Songs.csv  muzak.csv
scripts/: autofix.sh
spotty/: __init__.py  cli.py  utils.py
