[project]
name = "spotty"
version = "0.1.0"
description = "A terminal application for downloading songs from Exportify CSV files"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Seamus Mullan", email = "seamusmullan2023@gmail.com" }
]
license = { text = "MIT" }
keywords = ["spotify", "exportify", "music", "cli", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "black>=25.9.0",
    "pandas>=2.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=4.0.2",
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
spotty = "spotty.cli:main"

[project.urls]
Homepage = "https://github.com/SeamusMullan/Spotty"
Repository = "https://github.com/SeamusMullan/Spotty"
Issues = "https://github.com/SeamusMullan/Spotty/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
